#2043 refactor: update remote server name handling to use ServerInfo type